🔧 Add site title next to logo in header on all pages

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Contact Us - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Header -->
     <header class="sticky-header">
-        <div class="logo-container">
-            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+        <div class="logo-title-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
         </div>
         <nav>
             <ul class="menu">
@@ -26,10 +29,15 @@
         <h1>Contact Us</h1>
         <p>Have a question, suggestion, or just want to say hi? We'd love to hear from you!</p>
         <form id="contactForm">
-            <input type="text" id="name" placeholder="Your Name" required style="width: 100%; padding: 10px; margin: 10px 0;">
-            <input type="email" id="email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin: 10px 0;">
-            <textarea id="message" placeholder="Your Message" rows="6" required style="width: 100%; padding: 10px; margin: 10px 0;"></textarea>
-            <button type="submit" style="background-color: orange; color: white; padding: 12px 24px; border: none; cursor: pointer;">Send Message</button>
+            <input type="text" id="name" placeholder="Your Name" required
+                style="width: 100%; padding: 10px; margin: 10px 0;">
+            <input type="email" id="email" placeholder="Your Email" required
+                style="width: 100%; padding: 10px; margin: 10px 0;">
+            <textarea id="message" placeholder="Your Message" rows="6" required
+                style="width: 100%; padding: 10px; margin: 10px 0;"></textarea>
+            <button type="submit"
+                style="background-color: orange; color: white; padding: 12px 24px; border: none; cursor: pointer;">Send
+                Message</button>
             <p id="responseMessage" style="margin-top: 10px;"></p>
         </form>
     </main>
@@ -78,4 +86,5 @@
     </script>
     <script src="index_script.js"></script>
 </body>
+
 </html>
