--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,8 +14,9 @@
 
 <body>
     <header class="sticky-header">
-        <div class="logo-container">
+        <div class="logo-title-container">
             <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
         </div>
         <nav>
             <ul class="menu">
