--- a/frontend/termsofservice.html
+++ b/frontend/termsofservice.html
@@ -1,81 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service - Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service - Ultramarathon Connect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <!-- Header Section -->
-  <header class="sticky-header">
-    <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="forum.html">Runner Community</a></li>
-        <li id="account-tab" class="auth-tab"></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Header Section -->
+    <header class="sticky-header">
+        <div class="logo-title-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+                <li id="account-tab" class="auth-tab"></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Main Content Section -->
-  <main class="content-container" style="padding: 40px;">
-    <section class="terms-of-service">
-      <h1>Terms of Service</h1>
-      <p>Effective Date: January 25, 2025</p>
+    <!-- Main Content Section -->
+    <main class="content-container" style="padding: 40px;">
+        <section class="terms-of-service">
+            <h1>Terms of Service</h1>
+            <p>Effective Date: January 25, 2025</p>
 
-      <h2>1. Agreement to Terms</h2>
-      <p>By accessing or using Ultramarathon Connect, you agree to comply with these Terms of Service. If you do not agree, you may not use our services.</p>
+            <h2>1. Agreement to Terms</h2>
+            <p>By accessing or using Ultramarathon Connect, you agree to comply with these Terms of Service. If you do
+                not agree, you may not use our services.</p>
 
-      <h2>2. Use of the Website</h2>
-      <p>You agree to use Ultramarathon Connect only for lawful purposes. You are prohibited from:</p>
-      <ul>
-        <li>Posting offensive or inappropriate content.</li>
-        <li>Attempting to hack or disrupt our systems.</li>
-        <li>Using our services for fraudulent activities.</li>
-      </ul>
+            <h2>2. Use of the Website</h2>
+            <p>You agree to use Ultramarathon Connect only for lawful purposes. You are prohibited from:</p>
+            <ul>
+                <li>Posting offensive or inappropriate content.</li>
+                <li>Attempting to hack or disrupt our systems.</li>
+                <li>Using our services for fraudulent activities.</li>
+            </ul>
 
-      <h2>3. Accounts</h2>
-      <p>If you create an account, you are responsible for maintaining the confidentiality of your login credentials and for all activities that occur under your account.</p>
+            <h2>3. Accounts</h2>
+            <p>If you create an account, you are responsible for maintaining the confidentiality of your login
+                credentials and for all activities that occur under your account.</p>
 
-      <h2>4. Intellectual Property</h2>
-      <p>All content on Ultramarathon Connect, including logos, text, and images, is the property of Ultramarathon Connect. You may not copy, reproduce, or distribute this content without our written consent.</p>
+            <h2>4. Intellectual Property</h2>
+            <p>All content on Ultramarathon Connect, including logos, text, and images, is the property of Ultramarathon
+                Connect. You may not copy, reproduce, or distribute this content without our written consent.</p>
 
-      <h2>5. Third-Party Links</h2>
-      <p>Our website may contain links to third-party websites. We are not responsible for the content or practices of these external websites.</p>
+            <h2>5. Third-Party Links</h2>
+            <p>Our website may contain links to third-party websites. We are not responsible for the content or
+                practices of these external websites.</p>
 
-      <h2>6. Limitation of Liability</h2>
-      <p>Ultramarathon Connect is not liable for any direct, indirect, or consequential damages resulting from your use of the website.</p>
+            <h2>6. Limitation of Liability</h2>
+            <p>Ultramarathon Connect is not liable for any direct, indirect, or consequential damages resulting from
+                your use of the website.</p>
 
-      <h2>7. Changes to Terms</h2>
-      <p>We reserve the right to modify these Terms of Service at any time. Changes will be effective upon posting to this page, with an updated effective date.</p>
+            <h2>7. Changes to Terms</h2>
+            <p>We reserve the right to modify these Terms of Service at any time. Changes will be effective upon posting
+                to this page, with an updated effective date.</p>
 
-      <h2>8. Governing Law</h2>
-      <p>These Terms of Service are governed by the laws of California, United States.</p>
+            <h2>8. Governing Law</h2>
+            <p>These Terms of Service are governed by the laws of California, United States.</p>
 
-      <h2>9. Contact Us</h2>
-      <p>If you have any questions about these Terms of Service, please contact us at:</p>
-      <p>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></p>
-    </section>
-  </main>
+            <h2>9. Contact Us</h2>
+            <p>If you have any questions about these Terms of Service, please contact us at:</p>
+            <p>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></p>
+        </section>
+    </main>
 
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="footer-links">
-      <a href="contact.html">Contact Us</a> |
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="termsofservice.html">Terms of Service</a> |
-      <a href="faq.html">FAQ</a> |
-      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-    </div>
-    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-  </footer>
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
 
-  <!-- Script to handle session state -->
-  <script src="index_script.js"></script>
+    <!-- Script to handle session state -->
+    <script src="index_script.js"></script>
 </body>
+
 </html>
