--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post & Replies - Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Post & Replies - Ultramarathon Connect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header class="sticky-header">
-    <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="forum.html">Runner Community/a></li>
-        <li id="account-tab" class="auth-tab"></li>
-      </ul>
-    </nav>
-  </header>
+    <header class="sticky-header">
+        <div class="logo-title-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+                <li id="account-tab" class="auth-tab"></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main class="forum-wrapper">
-    <h1 class="forum-heading">Post & Replies</h1>
-    <section id="post-details"></section>
+    <main class="forum-wrapper">
+        <h1 class="forum-heading">Post & Replies</h1>
+        <section id="post-details"></section>
 
-    <section id="comments-container">
-      <div id="comment-list"></div>
+        <section id="comments-container">
+            <div id="comment-list"></div>
 
-      <form id="comment-form">
-        <textarea id="comment-content" placeholder="Write your reply..." required></textarea>
-        <button type="submit">Reply</button>
-        <p id="comment-error" class="error-message"></p>
-      </form>
-    </section>
-  </main>
+            <form id="comment-form">
+                <textarea id="comment-content" placeholder="Write your reply..." required></textarea>
+                <button type="submit">Reply</button>
+                <p id="comment-error" class="error-message"></p>
+            </form>
+        </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-links">
-      <a href="contact.html">Contact Us</a> |
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="termsofservice.html">Terms of Service</a> |
-      <a href="faq.html">FAQ</a> |
-      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-    </div>
-    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-  </footer>
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
 
-  <script src="comments_script.js"></script>
+    <script src="comments_script.js"></script>
 </body>
-</html>
 
+</html>
