--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Header Section -->
     <header class="sticky-header">
-        <div class="logo-container">
-            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+        <div class="logo-title-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
         </div>
         <nav>
             <ul class="menu">
@@ -26,49 +29,59 @@
     <main class="content-container">
         <section class="faq-section">
             <h1>Frequently Asked Questions</h1>
-            
+
             <h2>General Questions</h2>
             <div class="faq-item">
                 <h3>What is Ultramarathon Connect?</h3>
-                <p>Ultramarathon Connect is an online platform for discovering, preparing, and connecting with ultramarathons worldwide. We provide tools to explore races, share experiences, and connect with fellow runners.</p>
+                <p>Ultramarathon Connect is an online platform for discovering, preparing, and connecting with
+                    ultramarathons worldwide. We provide tools to explore races, share experiences, and connect with
+                    fellow runners.</p>
             </div>
 
             <div class="faq-item">
                 <h3>How do I register for an ultramarathon?</h3>
-                <p>Browse our <a href="race_directory.html">Race Directory</a> to find a race and follow the registration link provided in the race details.</p>
+                <p>Browse our <a href="race_directory.html">Race Directory</a> to find a race and follow the
+                    registration link provided in the race details.</p>
             </div>
 
             <h2>Account and Membership</h2>
             <div class="faq-item">
                 <h3>Do I need an account to use Ultramarathon Connect?</h3>
-                <p>No, but creating an account unlocks additional features such as posting in the community forums and saving your favorite races.</p>
+                <p>No, but creating an account unlocks additional features such as posting in the community forums and
+                    saving your favorite races.</p>
             </div>
 
             <div class="faq-item">
                 <h3>How do I create an account?</h3>
-                <p>Click on <a href="register.html">Register</a> in the navigation menu and fill out the registration form to create an account.</p>
+                <p>Click on <a href="register.html">Register</a> in the navigation menu and fill out the registration
+                    form to create an account.</p>
             </div>
 
             <h2>Races</h2>
             <div class="faq-item">
                 <h3>How often is the race directory updated?</h3>
-                <p>Our team updates the race directory regularly to ensure you have access to the latest events and details.</p>
+                <p>Our team updates the race directory regularly to ensure you have access to the latest events and
+                    details.</p>
             </div>
 
             <div class="faq-item">
                 <h3>Can I suggest a race to be added to the directory?</h3>
-                <p>Yes! Feel free to contact us via the <a href="contact.html">Contact Us</a> page to suggest a race for inclusion in our directory.</p>
+                <p>Yes! Feel free to contact us via the <a href="contact.html">Contact Us</a> page to suggest a race for
+                    inclusion in our directory.</p>
             </div>
 
             <h2>Support</h2>
             <div class="faq-item">
                 <h3>How can I contact support?</h3>
-                <p>If you have questions or need help, you can email us at <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a> or use the <a href="contact.html">Contact Us</a> page.</p>
+                <p>If you have questions or need help, you can email us at <a
+                        href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a> or use the <a
+                        href="contact.html">Contact Us</a> page.</p>
             </div>
 
             <div class="faq-item">
                 <h3>What if I encounter a technical issue?</h3>
-                <p>Please contact our support team with a detailed description of the issue, and we will resolve it as soon as possible.</p>
+                <p>Please contact our support team with a detailed description of the issue, and we will resolve it as
+                    soon as possible.</p>
             </div>
         </section>
     </main>
@@ -88,4 +101,5 @@
     <!-- Scripts -->
     <script src="index_script.js"></script>
 </body>
+
 </html>
