--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,14 +10,16 @@
 
 <body>
     <header class="sticky-header">
-        <div class="logo-container">
+        <div class="logo-title-container">
             <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
         </div>
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
                 <li><a href="forum.html">Runner Community</a></li>
+                <li id="account-tab" class="auth-tab"></li>
             </ul>
         </nav>
     </header>
