--- a/frontend/register.html
+++ b/frontend/register.html
@@ -11,8 +11,9 @@
 <body>
     <!-- Header -->
     <header class="sticky-header">
-        <div class="logo-container">
+        <div class="logo-title-container">
             <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
         </div>
         <nav>
             <ul class="menu">
