--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -10,8 +10,9 @@
 
 <body>
     <header class="sticky-header">
-        <div class="logo-container">
-            <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+        <div class="logo-title-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <span class="site-title">Ultramarathon Connect</span>
         </div>
         <nav>
             <ul class="menu">
