Update style.css and header layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,11 +14,11 @@
 
 <body>
     <header class="sticky-header">
-        <div class="logo-title-container">
+        <div class="header-left">
             <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
-            <span class="site-title">Ultramarathon Connect</span>
+            <span class="site-title">UltramarathonConnect</span>
         </div>
-        <nav>
+        <nav class="header-right">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
