--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,8 +15,9 @@
 <body>
     <header class="sticky-header">
         <div class="header-left">
-            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+            <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
             <span class="site-title">UltramarathonConnect</span>
+            <button class="menu-toggle" onclick="document.querySelector('.menu').classList.toggle('show')">☰</button>
         </div>
         <nav class="header-right">
             <ul class="menu">
