Fix mobile nav toggle and header alignment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,10 @@
         <div class="header-left">
             <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
             <span class="site-title">UltramarathonConnect</span>
-            <button class="menu-toggle" onclick="document.querySelector('.menu').classList.toggle('show')">☰</button>
         </div>
+
+        <button class="menu-toggle">☰</button>
+
         <nav class="header-right">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
