Fix mobile nav toggle and header alignment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,9 +19,9 @@
             <span class="site-title">UltramarathonConnect</span>
         </div>
 
-        <button class="menu-toggle">☰</button>
+        <button class="menu-toggle" aria-label="Toggle menu">☰</button>
 
-        <nav class="header-right">
+        <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="race_directory.html">Race Directory</a></li>
