--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -25,175 +25,170 @@
     </header>
 
     <main>
-        <div class="container">
-            <h2>Edit Your Profile</h2>
-            <div class="profile-image-container">
+        <main>
+            <div class="profile-edit-wrapper">
+                <h2>Edit Your Profile</h2>
                 <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img">
+
                 <form id="upload-form">
                     <input type="file" id="profile-picture" name="profilePicture" accept="image/*">
                     <button type="button" id="upload-button">Upload Picture</button>
                 </form>
-                <p id="upload-message" class="success-message" style="display: none;"></p>
+
+                <form id="profile-form">
+                    <input type="text" id="username" name="username" placeholder="Username" required>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <button type="submit" class="orange-btn">Save Changes</button>
+                </form>
+
+                <p id="success-message" class="success-message" style="display: none;">Profile updated successfully!</p>
+                <p id="error-message" class="error-message" style="display: none;">Error updating profile.</p>
             </div>
+        </main>
 
-            <form id="profile-form">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+        <footer class="site-footer">
+            <div class="footer-links">
+                <a href="contact.html">Contact Us</a> |
+                <a href="privacy.html">Privacy Policy</a> |
+                <a href="termsofservice.html">Terms of Service</a> |
+                <a href="faq.html">FAQ</a> |
+                <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+            </div>
+            <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+        </footer>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                const token = localStorage.getItem("token")?.trim();
+                const accountTab = document.getElementById("account-tab");
 
-                <button type="submit" class="orange-btn">Save Changes</button>
-            </form>
-
-            <p id="success-message" class="success-message" style="display: none;">Profile updated successfully!</p>
-            <p id="error-message" class="error-message" style="display: none;">Error updating profile.</p>
-        </div>
-    </main>
-
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
-            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-        </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const token = localStorage.getItem("token")?.trim();
-            const accountTab = document.getElementById("account-tab");
-
-            if (token) {
-                accountTab.innerHTML = `
+                if (token) {
+                    accountTab.innerHTML = `
                     <a href="account.html">My Account</a>
                     <a id="logout-link" href="#">Logout</a>
                 `;
-                document.getElementById("logout-link").addEventListener("click", () => {
-                    localStorage.removeItem("token");
-                    alert("You have been logged out.");
-                    window.location.href = "login.html";
-                });
-            } else {
-                accountTab.innerHTML = `
+                    document.getElementById("logout-link").addEventListener("click", () => {
+                        localStorage.removeItem("token");
+                        alert("You have been logged out.");
+                        window.location.href = "login.html";
+                    });
+                } else {
+                    accountTab.innerHTML = `
                     <a href="login.html">Login</a>
                     <a href="register.html">Register</a>
                 `;
-            }
-        });
+                }
+            });
 
-        async function loadProfile() {
-            const token = localStorage.getItem('token')?.trim();
-            if (!token) {
-                alert("You are not logged in. Redirecting to login...");
-                window.location.href = "login.html";
-                return;
-            }
-
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
-                    method: 'GET',
-                    headers: {
-                        Authorization: `Bearer ${token}`,
-                        'Content-Type': 'application/json',
-                    },
-                });
-
-                if (response.ok) {
-                    const { user } = await response.json();
-                    document.getElementById('username').value = user.username || '';
-                    document.getElementById('email').value = user.email || '';
-                    document.getElementById('profile-pic').src = user.profilePicture || 'images/default-profile.png';
-                } else {
-                    alert("Error loading profile. Redirecting to login...");
-                    localStorage.removeItem('token');
+            async function loadProfile() {
+                const token = localStorage.getItem('token')?.trim();
+                if (!token) {
+                    alert("You are not logged in. Redirecting to login...");
                     window.location.href = "login.html";
+                    return;
                 }
-            } catch (error) {
-                console.error("Error loading profile:", error);
-            }
-        }
 
-        async function uploadProfilePicture() {
-            const token = localStorage.getItem('token')?.trim();
-            const profilePicture = document.getElementById('profile-picture').files[0];
+                try {
+                    const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
+                        method: 'GET',
+                        headers: {
+                            Authorization: `Bearer ${token}`,
+                            'Content-Type': 'application/json',
+                        },
+                    });
 
-            if (!token || !profilePicture) {
-                alert("Please select a file to upload.");
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append('profilePicture', profilePicture);
-
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
-                    method: 'POST',
-                    headers: {
-                        Authorization: `Bearer ${token}`,
-                    },
-                    body: formData,
-                });
-
-                if (response.ok) {
-                    const data = await response.json();
-                    document.getElementById('profile-pic').src = data.profilePicture;
-                    alert("Profile picture uploaded successfully!");
-                } else {
-                    const error = await response.json();
-                    alert("Error uploading profile picture: " + (error.message || "Unknown error"));
+                    if (response.ok) {
+                        const { user } = await response.json();
+                        document.getElementById('username').value = user.username || '';
+                        document.getElementById('email').value = user.email || '';
+                        document.getElementById('profile-pic').src = user.profilePicture || 'images/default-profile.png';
+                    } else {
+                        alert("Error loading profile. Redirecting to login...");
+                        localStorage.removeItem('token');
+                        window.location.href = "login.html";
+                    }
+                } catch (error) {
+                    console.error("Error loading profile:", error);
                 }
-            } catch (error) {
-                console.error("Error uploading profile picture:", error);
-                alert("Error uploading profile picture. Please try again.");
-            }
-        }
-
-        document.getElementById('upload-button').addEventListener('click', uploadProfilePicture);
-
-        async function updateProfile() {
-            const username = document.getElementById('username').value.trim();
-            const email = document.getElementById('email').value.trim();
-            const token = localStorage.getItem('token')?.trim();
-
-            if (!token) {
-                alert("You are not logged in.");
-                return;
             }
 
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
-                    method: 'PUT',
-                    headers: {
-                        Authorization: `Bearer ${token}`,
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ username, email }),
-                });
+            async function uploadProfilePicture() {
+                const token = localStorage.getItem('token')?.trim();
+                const profilePicture = document.getElementById('profile-picture').files[0];
 
-                if (response.ok) {
-                    alert("Profile updated successfully!");
-                    window.location.href = "account.html";
-                } else {
-                    const errorData = await response.json();
-                    alert(errorData.message || "Error updating profile.");
+                if (!token || !profilePicture) {
+                    alert("Please select a file to upload.");
+                    return;
                 }
-            } catch (error) {
-                console.error("Error updating profile:", error);
-                alert("Error updating profile. Please try again.");
+
+                const formData = new FormData();
+                formData.append('profilePicture', profilePicture);
+
+                try {
+                    const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
+                        method: 'POST',
+                        headers: {
+                            Authorization: `Bearer ${token}`,
+                        },
+                        body: formData,
+                    });
+
+                    if (response.ok) {
+                        const data = await response.json();
+                        document.getElementById('profile-pic').src = data.profilePicture;
+                        alert("Profile picture uploaded successfully!");
+                    } else {
+                        const error = await response.json();
+                        alert("Error uploading profile picture: " + (error.message || "Unknown error"));
+                    }
+                } catch (error) {
+                    console.error("Error uploading profile picture:", error);
+                    alert("Error uploading profile picture. Please try again.");
+                }
             }
-        }
 
-        document.getElementById('profile-form').addEventListener('submit', (e) => {
-            e.preventDefault();
-            updateProfile();
-        });
+            document.getElementById('upload-button').addEventListener('click', uploadProfilePicture);
 
-        loadProfile();
-    </script>
+            async function updateProfile() {
+                const username = document.getElementById('username').value.trim();
+                const email = document.getElementById('email').value.trim();
+                const token = localStorage.getItem('token')?.trim();
+
+                if (!token) {
+                    alert("You are not logged in.");
+                    return;
+                }
+
+                try {
+                    const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
+                        method: 'PUT',
+                        headers: {
+                            Authorization: `Bearer ${token}`,
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ username, email }),
+                    });
+
+                    if (response.ok) {
+                        alert("Profile updated successfully!");
+                        window.location.href = "account.html";
+                    } else {
+                        const errorData = await response.json();
+                        alert(errorData.message || "Error updating profile.");
+                    }
+                } catch (error) {
+                    console.error("Error updating profile:", error);
+                    alert("Error updating profile. Please try again.");
+                }
+            }
+
+            document.getElementById('profile-form').addEventListener('submit', (e) => {
+                e.preventDefault();
+                updateProfile();
+            });
+
+            loadProfile();
+        </script>
 </body>
 
 </html>
