--- a/frontend/forgot-password.html
+++ b/frontend/forgot-password.html
@@ -10,22 +10,22 @@
 </head>
 
 <body>
-    <header class="sticky-header"></header>
-    <div class="header-inner">
-        <div class="header-left">
-            <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
-            <span class="site-title">UltramarathonConnect</span>
+    <header class="sticky-header">
+        <div class="header-inner">
+            <div class="header-left">
+                <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <span class="site-title">UltramarathonConnect</span>
+            </div>
+            <button class="menu-toggle">☰</button>
+            <nav class="header-right">
+                <ul class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="race_directory.html">Race Directory</a></li>
+                    <li><a href="forum.html">Runner Community</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
+                </ul>
+            </nav>
         </div>
-        <button class="menu-toggle">☰</button>
-        <nav class="header-right">
-            <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="race_directory.html">Race Directory</a></li>
-                <li><a href="forum.html">Runner Community</a></li>
-                <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
-    </div>
     </header>
 
     <main>
