--- a/frontend/register.html
+++ b/frontend/register.html
@@ -9,20 +9,22 @@
 </head>
 
 <body>
-    <!-- Header -->
     <header class="sticky-header">
-        <div class="logo-title-container">
-            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
-            <span class="site-title">Ultramarathon Connect</span>
+        <div class="header-inner">
+            <div class="header-left">
+                <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <span class="site-title">UltramarathonConnect</span>
+            </div>
+            <button class="menu-toggle">☰</button>
+            <nav class="header-right">
+                <ul class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="race_directory.html">Race Directory</a></li>
+                    <li><a href="forum.html">Runner Community</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="race_directory.html">Race Directory</a></li>
-                <li><a href="forum.html">Runner Community</a></li>
-                <li id="account-tab" class="auth-tab"></li>
-            </ul>
-        </nav>
     </header>
 
     <!-- Main -->
