--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -53,6 +53,7 @@
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
+    <script src="index_script.js"></script>
     <script src="comments_script.js"></script>
 </body>
 
