Fix header spacing and update style.css

--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="privacy">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
@@ -28,7 +28,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="content-container" style="padding: 40px;">
+    <main class="content-container">
         <h1>Privacy Policy</h1>
         <p><strong>Effective Date:</strong> January 25, 2025</p>
 
