--- a/frontend/termsofservice.html
+++ b/frontend/termsofservice.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="terms">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
