Fix layout issues: header spacing, forum alignment, account & profile edit spacing

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -161,6 +161,7 @@
         });
     </script>
 
+    <script src="index_script.js"></script>
     <script src="alanai_chatbot/alan.js"></script>
 </body>
 
