--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <main class="forum-wrapper">
+    <main class="forum-wrapper" style="padding-top: 140px;">
         <h1 class="forum-heading">Post & Replies</h1>
         <section id="post-details"></section>
 
