--- a/frontend/termsofservice.html
+++ b/frontend/termsofservice.html
@@ -28,7 +28,7 @@
     </header>
 
     <!-- Main Content Section -->
-    <main class="content-container" style="padding: 40px;">
+    <main class="content-container" style="padding: 133px 40px 40px 40px;">
         <section class="terms-of-service">
             <h1>Terms of Service</h1>
             <p>Effective Date: January 25, 2025</p>
