Fix layout issues across profile edit, forum, training log, and header spacing

--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
 </head>
 
-<body>
+<body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
