--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <main class="training-container">
+    <main class="training-container" style="padding-top: 140px;">
         <div id="profile-card" class="profile-card" style="display: none;"></div>
 
         <div class="button-bar">
@@ -46,7 +46,7 @@
     <style>
         .training-container {
             max-width: 900px;
-            margin: 5rem auto;
+            margin: 0 auto;
             padding: 2rem;
         }
 
