Fix: Adjusted forum and comments page padding and updated profile edit dropdown with My Account info

--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -27,8 +27,8 @@
         </div>
     </header>
 
-    <main class="forum-wrapper" style="padding-top: 140px;">
-        <h1 class="forum-heading">Post & Replies</h1>
+    <main class="forum-wrapper">
+        <h1 class="comments-heading">Post & Replies</h1>
         <section id="post-details"></section>
 
         <section id="comments-container">
