--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit Profile - Ultramarathon Finder</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="auth-page">
@@ -30,16 +30,16 @@
     <main>
         <div class="profile-edit-wrapper">
             <h2>Edit Your Profile</h2>
-            <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img">
+            <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img" />
 
             <form id="upload-form">
-                <input type="file" id="profile-picture" name="profilePicture" accept="image/*">
+                <input type="file" id="profile-picture" name="profilePicture" accept="image/*" />
                 <button type="button" id="upload-button">Upload Picture</button>
             </form>
 
             <form id="profile-form">
-                <input type="text" id="username" name="username" placeholder="Username" required>
-                <input type="email" id="email" name="email" placeholder="Email" required>
+                <input type="text" id="username" name="username" placeholder="Username" required />
+                <input type="email" id="email" name="email" placeholder="Email" required />
                 <button type="submit" class="orange-btn">Save Changes</button>
             </form>
 
@@ -67,15 +67,15 @@
             if (token) {
                 const profilePic = localStorage.getItem("profilePicture");
                 accountTab.innerHTML = `
-                    <div class="profile-dropdown">
-                        <img src="${profilePic || 'images/default-profile.png'}" class="profile-picture-nav" alt="Profile Picture">
-                        <div class="dropdown-menu">
-                            <a href="account.html">Profile</a>
-                            <a href="training_log.html">Training Log</a>
-                            <a id="logout-link" href="#">Sign Out</a>
-                        </div>
-                    </div>
-                `;
+          <div class="profile-dropdown">
+            <img src="${profilePic || 'images/default-profile.png'}" class="profile-picture-nav" alt="Profile Picture">
+            <div class="dropdown-menu">
+              <a href="account.html">Profile</a>
+              <a href="training_log.html">Training Log</a>
+              <a id="logout-link" href="#">Sign Out</a>
+            </div>
+          </div>
+        `;
 
                 document.getElementById("logout-link").addEventListener("click", () => {
                     localStorage.removeItem("token");
