Fix: Add full My Account dropdown to Edit Profile and adjust login spacing

--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edit Profile - Ultramarathon Finder</title>
+    <title>Edit Profile - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -30,16 +30,16 @@
     <main>
         <div class="profile-edit-wrapper">
             <h2>Edit Your Profile</h2>
-            <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img" />
+            <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img">
 
             <form id="upload-form">
-                <input type="file" id="profile-picture" name="profilePicture" accept="image/*" />
+                <input type="file" id="profile-picture" name="profilePicture" accept="image/*">
                 <button type="button" id="upload-button">Upload Picture</button>
             </form>
 
             <form id="profile-form">
-                <input type="text" id="username" name="username" placeholder="Username" required />
-                <input type="email" id="email" name="email" placeholder="Email" required />
+                <input type="text" id="username" name="username" placeholder="Username" required>
+                <input type="email" id="email" name="email" placeholder="Email" required>
                 <button type="submit" class="orange-btn">Save Changes</button>
             </form>
 
