Fix profile_edit.html header to match dropdown styling with profile picture and 'My Account' label

--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -68,14 +68,18 @@
                 const profilePic = localStorage.getItem("profilePicture");
                 accountTab.innerHTML = `
           <div class="dropdown">
-            <img src="${profilePic || 'images/default-profile.png'}" class="profile-picture-nav" alt="Profile Picture" />
-            <div class="dropdown-menu">
+            <button class="dropbtn">
+              <img src="${profilePic || 'images/default-profile.png'}" class="profile-picture-nav" alt="Profile Picture" />
+              My Account
+            </button>
+            <div class="dropdown-content">
               <a href="account.html">Profile</a>
               <a href="training_log.html">Training Log</a>
               <a id="logout-link" href="#">Sign Out</a>
             </div>
           </div>
         `;
+
                 document.getElementById("logout-link").addEventListener("click", () => {
                     localStorage.removeItem("token");
                     localStorage.removeItem("profilePicture");
