Add Training Groups section to Runner Community forum

--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -89,6 +89,23 @@
             </select>
         </section>
 
+        <!-- 🔥 Training Groups by Race Section -->
+        <section class="training-groups-section">
+            <h2>📍 Training Groups by Race</h2>
+            <p>Join or create a training group for an upcoming ultramarathon you're running!</p>
+            <div class="training-group-card">
+                <h4>Western States 100 (CA)</h4>
+                <p>Group for runners training for Western States. Weekly Zoom calls + local meetups in NorCal.</p>
+                <button>Join Group</button>
+            </div>
+            <div class="training-group-card">
+                <h4>UTMB (France)</h4>
+                <p>Global group for UTMB training. Share routes, advice, and gear picks.</p>
+                <button>Join Group</button>
+            </div>
+            <button class="create-group-btn">+ Create New Training Group</button>
+        </section>
+
         <!-- Posts Rendered by Topic -->
         <section class="forum-sections">
             <div class="forum-category" id="section-training">
