Update forum.html to add clickable group navigation

--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -93,16 +93,23 @@
         <section class="training-groups-section">
             <h2>📍 Training Groups by Race</h2>
             <p>Join or create a training group for an upcoming ultramarathon you're running!</p>
+
             <div class="training-group">
-                <h4>Western States 100 (CA)</h4>
+                <h4>
+                    <a href="group_forum.html?group=Western%20States%20100%20(CA)">Western States 100 (CA)</a>
+                </h4>
                 <p>Group for runners training for Western States. Weekly Zoom calls + local meetups in NorCal.</p>
                 <button class="join-btn">Join Group</button>
             </div>
+
             <div class="training-group">
-                <h4>UTMB (France)</h4>
+                <h4>
+                    <a href="group_forum.html?group=UTMB%20(France)">UTMB (France)</a>
+                </h4>
                 <p>Global group for UTMB training. Share routes, advice, and gear picks.</p>
                 <button class="join-btn">Join Group</button>
             </div>
+
             <button class="create-group-btn">+ Create New Training Group</button>
         </section>
 
