Fix create group button to link to create_group.html

--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -110,7 +110,7 @@
                 <button class="join-btn">Join Group</button>
             </div>
 
-            <button class="create-group-btn">+ Create New Training Group</button>
+            <a href="create_group.html" class="create-group-btn">+ Create New Training Group</a>
         </section>
 
         <!-- Posts Rendered by Topic -->
